--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@ionic-native/core": "4.6.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/sqlite": "^4.7.0",
-    "@ionic-native/status-bar": "4.6.0",
+    "@ionic-native/status-bar": "^4.6.0",
     "@ionic/storage": "^2.1.3",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.0",
     "ionic-angular": "3.9.2",
@@ -52,7 +53,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android"
