--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cordova-sqlite-storage": "^2.3.0",
     "ion2-calendar": "^2.1.7",
     "ionic-angular": "3.9.2",
+    "ionic2-super-tabs": "^4.2.2",
     "ionicons": "3.0.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
