--- a/package.json
+++ b/package.json
@@ -29,17 +29,18 @@
     "@ionic-native/status-bar": "^4.6.0",
     "@ionic-native/zbar": "^4.7.0",
     "@ionic/storage": "^2.1.3",
+    "angular2-qrcode": "^2.0.1",
     "cordova-android": "6.4.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-cszbar": "^1.3.4",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.1",
+    "cordova-sqlite-storage": "^2.3.2",
     "ion2-calendar": "^2.1.7",
     "ionic-angular": "3.9.2",
     "ionic2-super-tabs": "^4.2.2",
