--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-wechat": "^2.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.2",
     "ion2-calendar": "^2.1.7",
@@ -48,6 +49,7 @@
     "moment": "^2.22.1",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
+    "wechat-chenyu": "^1.0.2",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
@@ -65,7 +67,10 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-camera": {},
-      "cordova-plugin-cszbar": {}
+      "cordova-plugin-cszbar": {},
+      "cordova-plugin-wechat": {
+        "WECHATAPPID": "wx2376fa8168990156"
+      }
     },
     "platforms": [
       "android",
