--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/app-version": "^4.8.0",
     "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.6.0",
     "@ionic-native/qr-scanner": "^4.7.0",
@@ -31,6 +32,7 @@
     "@ionic/storage": "^2.1.3",
     "cordova-android": "6.4.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-cszbar": "^1.3.4",
     "cordova-plugin-device": "^2.0.2",
@@ -70,7 +72,8 @@
       "cordova-plugin-cszbar": {},
       "cordova-plugin-wechat": {
         "WECHATAPPID": "wx2376fa8168990156"
-      }
+      },
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "android",
