--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@ionic-native/app-version": "^4.8.0",
     "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/file": "^4.9.0",
+    "@ionic-native/file-opener": "^4.9.0",
+    "@ionic-native/file-transfer": "^4.9.0",
+    "@ionic-native/in-app-browser": "^4.9.0",
     "@ionic-native/qr-scanner": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/sqlite": "^4.7.0",
@@ -36,6 +40,10 @@
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-cszbar": "^1.3.4",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-opener2": "^2.0.19",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -73,7 +81,11 @@
       "cordova-plugin-wechat": {
         "WECHATAPPID": "wx2376fa8168990156"
       },
-      "cordova-plugin-app-version": {}
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file-opener2": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
