--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ionicons": "3.0.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
+    "qrcanvas": "^2.0.3",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
     "wechat-chenyu": "^1.0.2",
