--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orderApp",
+  "name": "DiningHall",
   "version": "0.0.1",
   "author": "Jimmy Liang",
   "homepage": "https://www.symbio.com/",
