--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cordova.plugins.diagnostic": "^4.0.8",
     "ion2-calendar": "^2.1.7",
     "ionic-angular": "3.9.2",
+    "ionic-gallery-modal": "^0.2.7",
     "ionic2-super-tabs": "^4.2.2",
     "ionicons": "3.0.0",
     "lodash": "^4.17.5",
