--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic-native/status-bar": "^4.6.0",
     "@ionic-native/zbar": "^4.7.0",
     "@ionic/storage": "^2.1.3",
+    "angularx-qrcode": "^1.1.7",
     "cordova-android": "6.4.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-app-version": "^0.1.9",
@@ -69,7 +70,7 @@
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.8",
+    "@ionic/app-scripts": "3.1.9",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project for order",
