--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ionicons": "3.0.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
+    "ng2-translate": "^5.0.0",
     "qrcanvas": "^2.0.3",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
@@ -70,7 +71,7 @@
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.9",
+    "@ionic/app-scripts": "^3.1.11",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project for order",
