--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-opener2": "^2.0.19",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-image-picker": "git+https://github.com/Findiglay/cordova-imagePicker.git",
+    "cordova-plugin-image-picker": "^1.1.3",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
