--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-image-picker": "^1.1.3",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.3",
-    "cordova.plugins.diagnostic": "^4.0.8",
+    "cordova-sqlite-storage": "^2.4.0",
+    "cordova.plugins.diagnostic": "^4.0.10",
     "ion2-calendar": "^2.1.7",
     "ionic-angular": "3.9.2",
     "ionic-gallery-modal": "^0.2.7",
@@ -95,8 +95,8 @@
       "cordova-plugin-image-picker": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
